<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".phonenumscreenone"
    android:background="@drawable/screenone">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_sendotp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/chat"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/you_will_receive_an_otp_on_the_phone_number_entered_below"
            android:textColor="@color/cardview_shadow_end_color"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/shownumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/enter_your_mobile_number_below"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_191"
                android:textColor="#FCE4EC"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/inputmobilenumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/_1234567890"
                android:textColorHint="@color/cardview_dark_background"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/cardview_shadow_start_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />



        </LinearLayout>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/send_otp"
            android:textColor="#546E7A"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <ProgressBar
            android:id="@+id/sendprogress"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>