<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@drawable/screen2"
    tools:context=".otpscreentwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/mail"
            tools:ignore="ContentDescription,ImageContrastCheck"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="Your mobile number as entered"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/shownumber"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlHardcoded,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlHardcoded,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/didn_t_recieve_the_otp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/resendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/resend_otp"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_otp"
            android:layout_margin="45dp"
            android:backgroundTint="@color/teal_200"
            android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/submitprogress"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>